[gd_scene load_steps=6 format=3 uid="uid://warehouse_confrontation"]

[ext_resource type="Script" path="res://samples/mystery/scripts/warehouse_confrontation_scene.gd" id="1_warehouse_confrontation_scene"]
[ext_resource type="Script" path="res://samples/mystery/scripts/dialogue_ui_advanced.gd" id="2_dialogue_adv"]
[ext_resource type="Script" path="res://samples/mystery/scripts/inventory_ui.gd" id="3_evidence_inventory"]
[ext_resource type="Script" path="res://samples/mystery/scripts/testimony_system.gd" id="4_testimony_system"]
[ext_resource type="Script" path="res://samples/mystery/scripts/health_bar.gd" id="5_health_bar"]

[node name="WarehouseConfrontation" type="Node2D"]
script = ExtResource("1_warehouse_confrontation_scene")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1024.0
offset_bottom = 600.0
color = Color(0.15, 0.15, 0.15, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DialogueUI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 1024.0
offset_bottom = 250.0
script = ExtResource("2_dialogue_adv")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/DialogueUI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 250.0

[node name="NameLabel" type="Label" parent="CanvasLayer/DialogueUI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "容疑者"
theme_override_font_sizes/font_size = 18

[node name="TextLabel" type="Label" parent="CanvasLayer/DialogueUI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 5
text = "テキストがここに表示されます"
theme_override_font_sizes/font_size = 14
auto_wrapping_enabled = true

[node name="ChoicesContainer" type="VBoxContainer" parent="CanvasLayer/DialogueUI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="InventoryUI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 1
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.2
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
script = ExtResource("3_evidence_inventory")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/InventoryUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0

[node name="Label" type="Label" parent="CanvasLayer/InventoryUI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "証拠品"

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/InventoryUI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="DetailPanel" type="PanelContainer" parent="CanvasLayer/InventoryUI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/InventoryUI/VBoxContainer/DetailPanel"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="CanvasLayer/InventoryUI/VBoxContainer/DetailPanel/VBoxContainer"]
layout_mode = 2
text = "証拠品名"

[node name="DescriptionLabel" type="Label" parent="CanvasLayer/InventoryUI/VBoxContainer/DetailPanel/VBoxContainer"]
layout_mode = 2
text = "説明"
auto_wrapping_enabled = true

[node name="IconRect" type="TextureRect" parent="CanvasLayer/InventoryUI/VBoxContainer/DetailPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 3

[node name="TestimonySystem" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 300.0
offset_right = 200.0
offset_bottom = 550.0
script = ExtResource("4_testimony_system")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/TestimonySystem"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SpeakerLabel" type="Label" parent="CanvasLayer/TestimonySystem/VBoxContainer"]
layout_mode = 2
text = "容疑者"
theme_override_font_sizes/font_size = 14

[node name="TestimonyText" type="Label" parent="CanvasLayer/TestimonySystem/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "証言内容"
auto_wrapping_enabled = true

[node name="ActionContainer" type="HBoxContainer" parent="CanvasLayer/TestimonySystem/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1

[node name="NextButton" type="Button" parent="CanvasLayer/TestimonySystem/VBoxContainer/ActionContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "次へ"

[node name="ShakeButton" type="Button" parent="CanvasLayer/TestimonySystem/VBoxContainer/ActionContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "ゆさぶる"

[node name="PresentButton" type="Button" parent="CanvasLayer/TestimonySystem/VBoxContainer/ActionContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "つきつける"

[node name="HealthBar" type="HBoxContainer" parent="CanvasLayer"]
layout_mode = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.2
anchor_bottom = 0.05
offset_top = 10.0
offset_left = 10.0
script = ExtResource("5_health_bar")
